<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:title="Home"
            android:id="@+id/homepage_menuItem"
            android:icon="@drawable/svg_whatshot_white_48px"/>
        <item
            android:title="Favorites"
            android:id="@+id/favorites_menuItem"
            android:icon="@drawable/svg_favorite_white_48px"/>

        <item android:title="@string/contact_us"
            android:id="@+id/contact_us_menuItem"
            android:icon="@drawable/svg_chat_white_48px"/>

        <item
            android:title="@string/sponsors"
            android:id="@+id/sponsors_menuItem"
            android:icon="@drawable/svg_new_releases_white_48px"/>

    </group>

    <group android:id="@+id/group2">
        <item android:title="@string/share"
            android:id="@+id/share_app_menuItem"
            android:icon="@drawable/svg_share_white_48px"/>

        <item
            android:title="@string/committee"
            android:id="@+id/commitee_menuItem"
            android:icon="@drawable/svg_group_work_white_48px"/>

        <item
            android:title="@string/developers"
            android:id="@+id/developers_menuItem"
            android:icon="@drawable/svg_code_white_48px"/>


    </group>

    <item
        android:title="@string/aboutapp"
        android:id="@+id/about_menuItem"/>

</menu>