<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="spit.matrix2017.Activities.EventDetails">
    <item
        android:id="@+id/action_add_to_favourites"
        android:icon="@drawable/heart_white_filled"
        android:orderInCategory="1"
        android:title="@string/add_to_favourites"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_set_reminder"
        android:icon="@drawable/alarm_plus"
        android:orderInCategory="2"
        android:title="@string/set_reminder"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share_variant"
        android:orderInCategory="3"
        android:title="@string/share_event"
        app:showAsAction="ifRoom" />
</menu>
