<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            style="@style/RippleEffectCardView"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/app_name"
                        android:typeface="monospace"/>

                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/app_licence"
                        android:typeface="monospace"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/app_copyright"
                        android:typeface="monospace"/>

                </LinearLayout>

                <Button
                    android:id="@+id/rateAppButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="Rate This App"
                    android:textStyle="bold"
                    android:typeface="monospace"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Implemented Libraries :"
            android:textSize="20dp"
            android:typeface="monospace"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/mild_green"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            style="@style/RippleEffectCardView"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/picasso_name"
                        android:textSize="20dp"
                        android:typeface="monospace"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/picasso_author"
                        android:textSize="17dp"
                        android:textColor="@color/yellow_amber"
                        android:textAlignment="viewEnd"
                        android:typeface="monospace"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/picasso_description"
                    android:textSize="19dp"
                    android:typeface="monospace"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/picasso_copyright"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/picasso_license"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            style="@style/RippleEffectCardView"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/circular_image_view_name"
                        android:textSize="20dp"
                        android:typeface="monospace"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/circular_image_view_author"
                        android:textSize="17dp"
                        android:textColor="@color/yellow_amber"
                        android:textAlignment="viewEnd"
                        android:typeface="monospace"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circular_image_view_description"
                    android:textSize="19dp"
                    android:typeface="monospace"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/circular_image_view_copyright"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circular_image_view_license"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            style="@style/RippleEffectCardView"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/android_design"
                        android:textSize="20dp"
                        android:typeface="monospace"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/android_design_author"
                        android:textSize="17dp"
                        android:textColor="@color/yellow_amber"
                        android:textAlignment="viewEnd"
                        android:typeface="monospace"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/android_design_copyright"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/android_design_license"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            style="@style/RippleEffectCardView"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/android_support"
                        android:textSize="20dp"
                        android:typeface="monospace"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/android_support_author"
                        android:textSize="17dp"
                        android:textColor="@color/yellow_amber"
                        android:textAlignment="viewEnd"
                        android:typeface="monospace"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/android_support_copyright"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/android_support_license"
                    android:textSize="15dp"
                    android:typeface="monospace"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>