<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="spit.matrix2017.Activities.EventDetails"
    tools:showIn="@layout/activity_event_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <!--DESCRIPTION-->

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />

            <!--RULES-->

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/rules"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/rules_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />

            <!--PRIZES-->

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/prizes"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/prizes_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />

            <!--CONTACT US-->

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/contact_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white" />

            <!--CONTACT ONE-->

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/contact_name_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_person_one" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/save_contact_person_one"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/svg_save_white_48px" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/call_contact_person_one"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/svg_phone_white_24px" />


            </android.support.v7.widget.LinearLayoutCompat>

            <!--CONTACT TWO-->

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp">


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/contact_name_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_person_two" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/save_contact_person_two"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/svg_save_white_48px" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/call_contact_person_two"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/svg_phone_white_24px" />


            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>

</android.support.v4.widget.NestedScrollView>
